@@ -12759,6 +12759,7 @@ Changed: Now, rather use average of all surfaces in the design as default
 surface for display.
 
 ------------------------------------------------------------------------
+r1045 | gaser | 2016-10-24 15:22:21 +0200 (Mo, 24 Okt 2016) | 27 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -12786,5 +12787,15 @@ M       tbx_cfg_cat.m
 (5) Changed: Commented out usefolder tag for ROI estimation and changed
     name for decimal_point according to its tag name.
 (6) Removed: spm_spm_changed.m that is not necessary anymore.
+
 ------------------------------------------------------------------------
-r1045 | gaser | 2016-10-24 15:22:08
+
+Changed paths:
+M       CHANGES.txt
+M       Contents.m
+M       cat_vol_groupwise_ls.m
+M       html/cat.html
+
+Fixed: cat_vol_groupwise_ls.m was not working with the updated version.
+------------------------------------------------------------------------
+r1046 | gaser | 2016-10-25 11:39:13
